tests/ui/transmutability/references/recursive-wrapper-types-bit-incompatible.stderr
error[E0277]: `B` cannot be safely transmuted into `A`
  --> $DIR/recursive-wrapper-types-bit-incompatible.rs:23:49
   |
LL |     assert::is_maybe_transmutable::<&'static B, &'static A>();
   |                                                 ^^^^^^^^^^ at least one value of `B` isn't a bit-valid value of `A`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/recursive-wrapper-types-bit-incompatible.rs:9:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: false,
...  |
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
